--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -15,7 +15,7 @@ tags: []
   {% if not post.data.draft %}
   <article class="blog-post-preview">
     <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
-    <p class="post-meta">{{ post.date | dateFormat }}</p>
+    <p class="post-meta">{{ post.date | dateFormat }}{% if post.data.author %} · by <a href="{{ post.data.authorUrl }}">{{ post.data.author }}</a>{% endif %}</p>
     {% if post.data.excerpt %}
     <p class="excerpt">{{ post.data.excerpt }}</p>
     {% endif %}
